# ogl_dorkin

./: .gitignore  CMakeLists.txt
src/: glad.c  input.cpp  main.cpp  renderCycle.cpp  windowworks.cpp
src/include/: fileworks.h  object.h  renderer.h  shader.h
src/include/glad/: glad.h
